# maxio

./: .dockerignore  .gitignore  .trivyignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.ui  Makefile  README.md  build.rs  deny.toml  jean.json  package.json
.github/workflows/: ci.yml  release.yml
coverage/html/: index.html
coverage/html/coverage/home/build01/repos/maxio/src/: config.rs.html  embedded.rs.html  error.rs.html  main.rs.html  proxy.rs.html  rate_limit.rs.html  server.rs.html
coverage/html/coverage/home/build01/repos/maxio/src/api/: admin.rs.html  bucket.rs.html  console.rs.html  cors.rs.html  list.rs.html  multipart.rs.html  object.rs.html  router.rs.html  virtual_host.rs.html
coverage/html/coverage/home/build01/repos/maxio/src/auth/: credentials.rs.html  middleware.rs.html  signature_v4.rs.html
coverage/html/coverage/home/build01/repos/maxio/src/storage/: chunk_reader.rs.html  crypto.rs.html  keys.rs.html  mod.rs.html  policy.rs.html  quota.rs.html
coverage/html/coverage/home/build01/repos/maxio/src/xml/: response.rs.html
crates/maxio-admin/: Cargo.toml  README.md  config.example.toml
crates/maxio-admin/src/: cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
crates/maxio-admin/src/commands/: buckets.rs  config.rs  doctor.rs  housekeeping.rs  info.rs  keyring.rs  mod.rs  remote.rs  status.rs
crates/maxio-cluster/: Cargo.toml
crates/maxio-cluster/src/: client.rs  lib.rs  metadata.rs  routing.rs
crates/maxio-cluster/src/ec/: bitrot.rs  mod.rs
crates/maxio-cluster/src/harness/: mod.rs
crates/maxio-cluster/src/server/: mod.rs
crates/maxio-cluster/src/storage/: api.rs  http_network.rs  metrics.rs  mod.rs  network.rs  node.rs  raft_store.rs  types.rs
crates/maxio-cluster/tests/: cluster_p14.rs  storage_raft_http.rs
crates/maxio-common/: Cargo.toml  build.rs
crates/maxio-common/src/: admin.rs  cluster.rs  lib.rs  version.rs
crates/maxio-server/: Cargo.toml  build.rs
crates/maxio-server/src/: access_log.rs  app_state.rs  audit.rs  cluster.rs  cluster_sync.rs  config.rs  embedded.rs  error.rs  events.rs  lib.rs  metrics.rs  proxy.rs  server.rs  server_cluster_tests.rs  version.rs
crates/maxio-server/src/api/: admin.rs  bucket.rs  console.rs  cors.rs  list.rs  mod.rs  multipart.rs  object.rs  request_context.rs  router.rs  virtual_host.rs
crates/maxio-server/src/auth/: bucket_policy.rs  console_session.rs  credentials.rs  keycloak.rs  middleware.rs  mod.rs  tenant.rs  tenant_middleware.rs
crates/maxio-server/src/xml/: response.rs  types.rs
crates/maxio-storage/: Cargo.toml
crates/maxio-storage/src/: backend.rs  chunk_reader.rs  kms.rs  lib.rs  metadata_index.rs  policy.rs  raft_spike.rs
crates/maxio-storage/src/filesystem/: access_logging.rs  common.rs  ec_policy_tests.rs  encryption_io.rs  housekeeping.rs  index_parity_tests.rs  listing.rs  mod.rs  multipart.rs  object_io.rs  object_lock.rs
crates/maxio-storage/src/raft/: mod.rs
crates/maxio-ui/: Cargo.toml
crates/maxio-ui/src/: embedded.rs  lib.rs  main.rs
deploy/compose/: observability.yml
deploy/compose/grafana/dashboards/: maxio-overview.json
deploy/compose/grafana/provisioning/dashboards/: default.yml
deploy/compose/prometheus/: prometheus.yml
deploy/k8s/: registry-secret.example.yaml
deploy/k8s/distributed/: ingress.yaml  namespace.yaml  server-deployment.yaml  service.yaml  storage-statefulset.yaml  ui-deployment.yaml
deploy/k8s/single-node/: deployment.yaml  pvc.yaml  service.yaml
deploy/systemd/: maxio.service
docs/: BACKLOG.md  licensing.md  operations.md  s3-compatibility.md  security-audit.md
docs/out-of-tree/: knx-edge.md  permissive-ha-gateway-rfc.md
docs/plans/: 2026-05-18-sveltekit-tanstack-alignment.md  2026-06-28-bucket-policy-evaluation.md  2026-06-28-multi-user-credentials.md  2026-06-28-workspace-crate-split.md  2026-06-29-admin-cli-crate.md  2026-06-29-cilium-ebpf-deployment.md  2026-06-29-deployment-targets.md  2026-06-29-distributed-scale-raft.md  2026-06-29-metadata-index-lifecycle-ec.md  2026-06-29-multi-replica-raft-priority.md  2026-06-29-permissive-ingress-ha.md  2026-06-29-raft-library-spike.md  2026-06-29-replication-federation.md  2026-06-29-shared-libraries.md  2026-06-29-storage-raft-implementation.md  2026-06-29-ui-scale-out.md  2026-06-30-pingora-edge-lb.md
e2e/: package.json  playwright.config.ts
e2e/tests/: console-smoke.spec.ts
scripts/: backup-maxio.sh  build-offline-bundle.sh  build-offline-images.sh  check-coverage-floors.sh  check-crate-boundaries.sh  check-npm-licenses.sh  cluster-test.sh  dev.sh  e2e-console.sh  kind-cluster-smoke.sh  load-images.sh  sync-version.sh
src/: audit.rs  config.rs  embedded.rs  error.rs  lib.rs  main.rs  proxy.rs  rate_limit.rs  server.rs  version.rs
src/api/: admin.rs  bucket.rs  console.rs  cors.rs  list.rs  mod.rs  multipart.rs  object.rs  virtual_host.rs
src/auth/: credentials.rs  hmac.rs  middleware.rs  mod.rs  principal.rs  signature_v4.rs
src/storage/: chunk_reader.rs  crypto.rs  filesystem.rs  keys.rs  mod.rs  policy.rs  quota.rs
src/storage/filesystem/: common.rs  encryption_io.rs  housekeeping.rs  listing.rs  mod.rs  multipart.rs  object_io.rs
tests/: aws_cli_test.sh  integration.rs
ui/: package.json  svelte.config.js  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/: BucketList.svelte  BucketSettings.svelte  Login.svelte  ObjectBrowser.svelte  VersionHistory.svelte
ui/src/lib/api/: auth.ts  buckets.ts  http.ts  keys.ts  objects.ts  settings.ts  versions.ts
ui/src/lib/app/: AppShell.svelte
ui/src/lib/components/ui/button/: button.svelte
ui/src/lib/components/ui/callout/: callout.svelte
ui/src/lib/components/ui/confirm-dialog/: confirm-dialog.svelte  index.ts
ui/src/lib/components/ui/dialog/: dialog.svelte  index.ts
ui/src/lib/components/ui/switch/: switch.svelte
ui/src/lib/components/ui/table/: table-cell.svelte  table-head.svelte  table-header.svelte  table-row.svelte  table.svelte
ui/src/lib/query/: client.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/static/: theme-init.js
(+20 files in other folders)
