[workspace]
members = [".", "crates/maxio-common", "crates/maxio-storage", "crates/maxio-server", "crates/maxio-admin"]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/coollabsio/maxio"
authors = ["MaxIO Contributors"]

[package]
name = "maxio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "S3-compatible object storage server — single-binary replacement for MinIO"
keywords = ["s3", "object-storage", "minio", "storage", "server"]
categories = ["web-programming::http-server", "filesystem"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "maxio"
path = "src/main.rs"

[dependencies]
maxio-server = { path = "crates/maxio-server" }
maxio-storage = { path = "crates/maxio-storage" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
http = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored"] }
tempfile = "3"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1"
crc32c = "0.6"
percent-encoding = "2"