[package]
name = "maxio-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Remote administration CLI for MaxIO object storage instances"
keywords = ["maxio", "s3", "object-storage", "cli", "admin"]
categories = ["command-line-utilities"]

[[bin]]
name = "maxio-admin"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
maxio = { path = "../.." }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"