[package]
name = "maxio-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Multi-replica cluster coordination for MaxIO (P1-14)"
keywords = ["maxio", "raft", "cluster", "s3"]
categories = ["data-structures"]

[features]
default = []
# P1-24: 3-node cluster acceptance tests
cluster-tests = []
# Multi-process HTTP Raft integration tests
http-raft-tests = []

[dependencies]
maxio-common = { path = "../maxio-common" }
maxio-storage = { path = "../maxio-storage", features = ["raft"] }
openraft = { version = "0.9", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
thiserror = "2"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tempfile = "3"
reed-solomon-erasure = "6"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }