[package]
name = "maxio-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HTTP/S3 API server for MaxIO object storage"
keywords = ["maxio", "s3", "object-storage", "http-server"]
categories = ["web-programming::http-server"]

[dependencies]
maxio-storage = { path = "../maxio-storage" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
hyper = "1"
http = "1"
bytes = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
crc32fast = "1"
crc32c = "0.6"
sha1 = "0.10"
percent-encoding = "2"
thiserror = "2"
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
base64 = "0.22"
rust-embed = "8"
mime_guess = "2"
libc = "0.2"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored"] }
jsonwebtoken = "9"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"