[package]
name = "maxio-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Filesystem-backed object storage layer for MaxIO"
keywords = ["maxio", "s3", "object-storage", "filesystem"]
categories = ["filesystem"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt"] }
thiserror = "2"
anyhow = "1"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
crc32fast = "1"
crc32c = "0.6"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.10.1"
reed-solomon-erasure = "6"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = "3"